Summary of important user-visible changes for generate_html 0.1.5:
-------------------------------------------------------------------

 ** Updated link for the Octave Forge SVN repository.

Summary of important user-visible changes for generate_html 0.1.4:
-------------------------------------------------------------------

 ** HTML pages with documentation of each function now mention the
    package that the function belongs too and have a link for the
    package main page.

 ** Autoload field when generating a package index.html page is now
    correct.

 ** keywords on the `See also:' will be interpreted properly (rather
    than just function names).