@@ -1,3 +1,5 @@
+ ** Support including NEWS and prepared package documentation in html.
+
 Summary of important user-visible changes for generate_html 0.1.5:
 -------------------------------------------------------------------
 
